[JBPAPP-10846] create one-off branch